--- a/dz_10.html
+++ b/dz_10.html
@@ -2,9 +2,7 @@
 <html>
 <head>
 	<title></title>
-	<link href="assets/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<style>
+	<link href="bootstrap.min.css" rel="stylesheet"></head><style>
 #bod {   width: 100%;
          height: max-content;
          background: linear-gradient(65deg, yellow, white, yellow);
