--- a/dz_10.html
+++ b/dz_10.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title></title>
-	<link href="assets/css/bootstrap.min.css" rel="stylesheet">
+	<link href="bootstrap.min.css" rel="stylesheet">
 </head>
 <style>
 #bod {   width: 100%;
